--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -9,7 +9,7 @@
 // Import sections
 @use 'sections/navbar';
 @use 'sections/intro-section';
-@use 'sections/companies';
+@use 'sections/languages';
 @use 'sections/services';
 @use 'sections/testimonials';
 @use 'sections/faq';
