--- a/src/stylesheets/sections/_intro-section.scss
+++ b/src/stylesheets/sections/_intro-section.scss
@@ -18,10 +18,8 @@
         line-height: 6rem;
 
         i {
-
           font-size: 6rem;
-          color: $orange;
-
+          color: $pink;
         }
       }
     }
