--- a/src/stylesheets/_custom.scss
+++ b/src/stylesheets/_custom.scss
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+
 // THEME COLORS 
-$teal-dark:    #0d503c;
-$teal-light:  #20c997;
-$orange: #fd7e14;
-$footer: #151414;
+$teal-dark:    #4BA5B3;
+$teal-light:  #82DBCA;
+$pink: #EC8092;
+$orange: #EC8092;
+//Can't find where the code changing the btn color when you hover over it, so this is to cover that
+$footer: #141415;
 
 $primary: $teal-dark;
 $secondary: $teal-light;
@@ -16,4 +20,9 @@ $accordion-button-icon:         url("data:image/svg+xml,<svg xmlns='http://www.w
 $accordion-button-active-icon:  url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$accordion-icon-active-color}'><path fill-rule='evenodd' d='M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z'/>  <path d='M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z'/></svg>");
 
 @import "bootstrap/scss/bootstrap.scss";
-@import "bootstrap-icons/font/bootstrap-icons.scss"
+@import "bootstrap-icons/font/bootstrap-icons.scss";
+
+// AFTER IMPORTS
+body {
+    font-family: "DM Sans", sans-serif;
+}
