--- a/src/stylesheets/sections/_footer.scss
+++ b/src/stylesheets/sections/_footer.scss
@@ -12,7 +12,7 @@
 
   &__icon {
     width: 2rem;
-    stroke: $orange;
+    stroke: $pink;
     padding-top: 0.5rem;
 
     @include media-breakpoint-up(sm) {
